@@ -11,7 +11,7 @@
 #include <QtGui/QImage>
 
 #include "GeoDataContainer.h"
-#include "GeoDataPlacemark.h"
+#include "GeoDataFeature.h"
 #include "ViewParams.h"
 
 GeoDataContainer::GeoDataContainer()
@@ -20,18 +20,51 @@ GeoDataContainer::GeoDataContainer()
 
 GeoDataContainer::~GeoDataContainer()
 {
-    qDebug("GeoDataContainer::~GeoDataContainer(). Object count: %d", m_placemarkVector.count());
+    qDebug("GeoDataContainer::~GeoDataContainer(). Object count: %d", m_featureVector.count());
 
-    foreach ( GeoDataPlacemark* placemark, m_placemarkVector ) {
-        delete placemark;
+    foreach ( GeoDataFeature* feature, m_featureVector ) {
+        delete feature;
     }
 }
 
-void GeoDataContainer::addPlaceMark( GeoDataPlacemark* placemark )
+void GeoDataContainer::addFeature( GeoDataFeature* feature )
 {
-    m_placemarkVector.append( placemark );
+    m_featureVector.append( feature );
 }
 
+
+void GeoDataContainer::pack( QDataStream& stream ) const
+{
+    GeoDataFeature::pack( stream );
+
+    stream << m_featureVector.count();
+
+    for ( QVector <GeoDataFeature*>::const_iterator iterator = m_featureVector.constBegin();
+          iterator != m_featureVector.end();
+          iterator++ )
+    {
+        const GeoDataFeature& feature = * ( *iterator );
+        feature.pack( stream );
+    }
+}
+
+void GeoDataContainer::unpack( QDataStream& stream )
+{
+    GeoDataFeature::unpack( stream );
+
+    int count;
+    stream >> count;
+
+    for ( int i = 0; i < count; ++i ) {
+        GeoDataFeature* feature = new GeoDataFeature();
+        feature->unpack( stream );
+
+        m_featureVector.append( feature );
+    }
+}
+
+
+#if 0   // Shouldn't be here at all
 PlaceMarkContainer& GeoDataContainer::activePlaceMarkContainer( const ViewParams& viewParams )
 {
     switch( viewParams.m_projection ) {
@@ -47,6 +80,7 @@ PlaceMarkContainer& GeoDataContainer::activePlaceMarkContainer( const ViewParams
     //
     return sphericalActivePlaceMarkContainer(viewParams);
 }
+
 
 PlaceMarkContainer& GeoDataContainer::sphericalActivePlaceMarkContainer( const ViewParams& viewParams )
 {
@@ -129,33 +163,4 @@ PlaceMarkContainer& GeoDataContainer::rectangularActivePlaceMarkContainer( const
     qDebug("GeoDataDocument::activePlaceMarkContainer (). PlaceMarks count: %d", m_activePlaceMarkContainer.count());
     return m_activePlaceMarkContainer;
 }
-
-void GeoDataContainer::pack( QDataStream& stream ) const
-{
-    GeoDataFeature::pack( stream );
-
-    stream << m_placemarkVector.count();
-
-    for ( QVector <GeoDataPlacemark*>::const_iterator iterator = m_placemarkVector.constBegin();
-          iterator != m_placemarkVector.end();
-          iterator++ )
-    {
-        const GeoDataPlacemark& placemark = * ( *iterator );
-        placemark.pack( stream );
-    }
-}
-
-void GeoDataContainer::unpack( QDataStream& stream )
-{
-    GeoDataFeature::unpack( stream );
-
-    int count;
-    stream >> count;
-
-    for ( int i = 0; i < count; ++i ) {
-        GeoDataPlacemark* placemark = new GeoDataPlacemark();
-        placemark->unpack( stream );
-
-        m_placemarkVector.append( placemark );
-    }
-}
+#endif
